# ondc-opencommerce

./: .env  WORKSPACE  config.json  go.mod  go.sum
buyer-platform/bap-adapter-service/: server.go
buyer-platform/bap-api/: server.go
buyer-platform/buyer-app-service/: server.go
buyer-platform/request-action-service/: server.go
onboarding/: server.go
shared/clients/keyclient/: BUILD.bazel  aws_key_client.go  gcp_key_client.go
shared/clients/localstack-aws-client/: aws-sns-client.go
shared/config/testdata/: bap_api.json  buyer_app_config.json  callback_action.json
shared/models/model/: common.go
shared/signing-authentication/authentication/: authentication.go
