# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "keyclient",
    srcs = [
        # "aws_key_client.go",
        "gcp_key_client.go",
    ],
    importpath = "partner-innovation.googlesource.com/googleondcaccelerator.git/shared/clients/keyclient",
    visibility = ["//visibility:public"],
    deps = [
        # "@com_github_aws_aws_sdk_go_v2//aws",
        # "@com_github_aws_aws_sdk_go_v2_service_secretsmanager//:secretsmanager",
        # "@com_github_aws_smithy_go//:smithy-go",
        # "@com_github_aws_smithy_go//endpoints",
        "@com_google_cloud_go_secretmanager//apiv1",
        "@com_google_cloud_go_secretmanager//apiv1/secretmanagerpb",
        "@org_golang_google_api//option",
    ],
)
